Added more questions

--- a/writeup.tex
+++ b/writeup.tex
@@ -48,6 +48,9 @@ Now we prove that the number of max moves is less than the number of unblocked c
 \textbf{Proof:} Let $n$ be the number of unblocked cells. Because A* uses a consistent heuristic, the agent visits each unblocked cell at most once even in its worst case scenario. Therefore, the number of moves is at most $n$. Since there are $n$ unblocked cells, the total number of moves is always less than $n \times n = n^2$. 
 \\ 
 \\
+
+\section{Question 2}
+\section{Question 3}
 \section{Conclusion}
 Conclude your document here.
 
