--- a/writeup.tex
+++ b/writeup.tex
@@ -173,7 +173,7 @@ This subsection's goal is to provide proof that  Adaptive A* leaves initially co
 where h*(s) is the true cost from s to the goal. The definition used for consistency will be the same as in section 5.1
 
 \subsection{Proof of Consistency and Admissibility}
-Adaptive A* updates the heuristic values after each search based on the discovered costs from nodes to the goal. Specifically, after finding a path to the goal, the heuristic h_{\text{new}}(s)
+Adaptive A* updates the heuristic values after each search based on the discovered costs from nodes to the goal. Specifically, after finding a path to the goal, the heuristic h\_{\text{new}}(s)
 
 
 
